# proofrun

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  MAINTAINERS.md  README.md  RELEASE.md  TESTING.md  justfile
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
.kiro/specs/proofrun-differentiation/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/rust-native-planner/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
crates/cargo-proofrun/: Cargo.toml
crates/cargo-proofrun/src/: main.rs
crates/proofrun/: Cargo.toml
crates/proofrun/schema/: plan.schema.json  receipt.schema.json
crates/proofrun/src/: cargo_workspace.rs  compare.rs  config.rs  doctor.rs  emit.rs  explain.rs  git.rs  lib.rs  model.rs  obligations.rs  planner.rs  run.rs
crates/proofrun/tests/: conformance.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
docs/: architecture.md  cli.md  parity-matrix.md  policy.md  repo-map.md  roadmap.md  scenario-atlas.md
examples/: proofrun.toml
fixtures/demo-workspace/: README.md
fixtures/demo-workspace/sample/: commits.json
fixtures/demo-workspace/sample/core-change/: commands.sh  diff.patch  explain.txt  github-actions.yml  plan.json  receipt.json
fixtures/demo-workspace/sample/deletion-only/: commands.sh  diff.patch  github-actions.yml  plan.json  plan.md  receipt.json
fixtures/demo-workspace/sample/docs-change/: commands.sh  diff.patch  github-actions.yml  plan.json  plan.md  receipt.json
fixtures/demo-workspace/sample/empty-diff/: commands.sh  github-actions.yml  plan.json  plan.md  receipt.json
fixtures/demo-workspace/sample/rename/: commands.sh  diff.patch  github-actions.yml  plan.json  plan.md  receipt.json
reference/: README.md  proofrun_ref.py
schema/: config.schema.json
scripts/: wait-for-crates-io-version.sh
tests/: test_reference.py
