[package]
name = "cargo-proofrun"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "cargo-proofrun"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
serde_json.workspace = true
proofrun = { path = "../proofrun" }
