[package]
name = "cargo-proofrun"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Deterministic proof-plan compiler for Cargo workspaces"
homepage = "https://github.com/EffortlessMetrics/proofrun"
repository = "https://github.com/EffortlessMetrics/proofrun"
readme = "../../README.md"
documentation = "https://docs.rs/cargo-proofrun"
keywords = ["cargo", "ci", "diff", "verification", "planning"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "cargo-proofrun"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
camino.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
proofrun = { path = "../proofrun", version = "0.1.0" }
