[package]
name = "proofrun"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Deterministic proof-plan compiler library for Cargo workspaces"
homepage = "https://github.com/EffortlessMetrics/proofrun"
repository = "https://github.com/EffortlessMetrics/proofrun"
readme = "../../README.md"
documentation = "https://docs.rs/proofrun"
keywords = ["cargo", "ci", "diff", "verification", "planning"]
categories = ["development-tools"]

[dependencies]
anyhow.workspace = true
camino.workspace = true
regex.workspace = true
jsonschema.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
toml.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
